app/components/modal/ContactModal.module.css
.contactModal {
  position: fixed;
  top: 0;
  left: 0;
  min-height: 100vh;
  min-width: 100vw;
  z-index: 100;
  display: flex;
  justify-content: center;
  align-items: center;
}

.contactModalBackdrop {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background-color: #000;
  opacity: 40%;
  z-index: -1;
}

.contactModalBox {
  margin: 1.6rem;
  padding: 3rem 1.6rem;
  text-align: center;
  position: relative;
  overflow: hidden;
  width: 100%;
  max-width: 70rem;
}

@media screen and (min-width: 500px) {
  .contactModalBox {
    margin: 2rem;
    padding: 3rem;
  }
}

@media screen and (min-width: 750px) {
  .contactModalBox {
    margin: 4rem;
    padding: 3.6rem 6rem 6rem;
  }
}

.contactModalBoxBackground {
  background: var(--color-primary);
  position: absolute;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  z-index: -1;
}

.contactModalContactDetails {
  font-family: var(--font-advent-pro);
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  gap: 1rem;
  color: var(--color-tertiary-darkest);
  margin-bottom: 3rem;
}

.contactModalContactDetails :global(.d2) {
  font-size: 2.8rem;
}

@media screen and (min-width: 500px) {
  .contactModalContactDetails :global(.d2) {
    font-size: 3.8rem;
  }
}

@media screen and (min-width: 750px) {
  .contactModalContactDetails :global(.d2) {
    font-size: 5rem;
  }
}

@media screen and (min-width: 990px) {
  .contactModalContactDetails :global(.d2) {
    font-size: 6.4rem;
  }
}

.contactModalContactDetails a {
  font-family: inherit;
  transition: color 0.2s ease;
}

.contactModalContactDetails a:hover {
  color: var(--color-secondary);
}

.contactModalForm {
  margin-top: 3rem;
  display: flex;
  flex-direction: column;
  gap: 6rem;
}

.contactModalButtons {
  display: flex;
  align-items: center;
  justify-content: space-between;
  gap: 4rem;
}

